--- a/config/endpoints/Blog.yaml
+++ b/config/endpoints/Blog.yaml
@@ -15,6 +15,8 @@ count:
 get:
   type: get
   url: admin/blogs/{blogId}
+  url_params:
+    blogId: int
   returns: blog
   allow:
     fields: string
@@ -39,6 +41,8 @@ create:
 update:
   type: put
   url: admin/blogs/{blogId}
+  url_params:
+    blogId: int
   returns: blog
   allow:
     title: string
@@ -54,3 +58,5 @@ update:
 delete:
   type: delete
   url: admin/blogs/{blogId}
+  url_params:
+    blogId: int
