--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
     }
   ],
   "require": {
-    "symfony/console": "^3.0"
+    "symfony/console": "^3.0",
+    "guzzlehttp/guzzle": "^6.2",
+    "guzzlehttp/promises": "^1.1",
+    "illuminate/routing": "^5.2"
   },
   "require-dev": {
     "memio/memio": "^1.0",
