--- a/config/endpoints/AbandonedCheckouts.yaml
+++ b/config/endpoints/AbandonedCheckouts.yaml
@@ -1,6 +1,7 @@
 count:
   type: get
   url: admin/checkouts/count
+  returns: count
   allow:
     since_id: int
     created_at_min: DateTime
@@ -15,6 +16,7 @@ count:
 search:
   type: get
   url: admin/checkouts
+  returns: checkouts
   allow:
     limit: int
     page: int
