Quoting yaml scalar

--- a/config/endpoints/ApplicationCharge.yaml
+++ b/config/endpoints/ApplicationCharge.yaml
@@ -10,7 +10,7 @@ create:
         required: true
     return_url: string
     test: bool
-  returns: @http_status_success
+  returns: "@http_status_success"
 
 get:
   type: get
